# py-ansi-art-convert

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
ansi-unicode/: font_data.py  tokenise.py
ansi_art_convert/: convert.py  encoding.py  font_data.py  log.py  sauce.py
ansi_art_convert/terminals/: alacritty.py
ansi_art_convert/terminals/configs/: alacritty.toml
docs/: dev.md  sauce.md
ops/: Dockerfile
ops/githooks/: pre-commit
test/: conftest.py  helper.py  test_render.py  test_sauce.py  test_tokenise.py  test_tokens.py
