[project]
name = "ansi-art-convert"
version = "0.1.3"
description = "ANSI > UTF-8 Conversion"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Tom McKeesick", email = "tmck01@gmail.com"},
]
maintainers = [
    {name = "Tom McKeesick", email = "tmck01@gmail.com"},
]
keywords = ["ANSI", "ASCII", "art", "conversion", "UTF-8", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = ["laser-prynter"]
[dependency-groups]
dev = [
    "build",
    "twine",
    "ruff",
    "mypy",
]

[project.urls]
homepage = "https://github.com/tmck-code/py-ansi-art-convert"

[project.scripts]
ansi-art-convert = "ansi_art_convert.convert:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
disallow_untyped_defs = true # no functions without type annotations
warn_return_any = true       # warn about functions that return Any
ignore_missing_imports = true # ignore imports that can't be resolved (e.g., third-party libraries without type stubs)

[tool.ruff]
exclude = ["ops/", ".venv/"]
[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
